Fix div overflow

--- a/frontend/src/styles/Flashcard.css
+++ b/frontend/src/styles/Flashcard.css
@@ -6,6 +6,7 @@
     line-height: 305px;
     border: 1px solid;
     word-wrap: break-word;
+    white-space: initial
 }
 
 .card-rectangle-back {
@@ -14,7 +15,9 @@
     background: white;
     text-align: center;
     line-height: 305px;
-    border: 1px solid;word-wrap: break-word;
+    border: 1px solid;
+    word-wrap: break-word;
+    white-space: initial
     background-image: linear-gradient(to bottom,
         #ffffff 15%,
         #F94545 16%,
